# forever

./: .gitignore  Cargo.toml  Makefile  README.md  bushu.md
.cargo/: config
crates/product/: Cargo.toml
crates/product/src/: lib.rs  logfile.rs  main.rs  uart.rs
crates/update/: Cargo.toml
crates/update/src/: asbind.rs  lib.rs  logfile.rs  main.rs  uart.rs  update_off.rs  web.rs
src/: 18.txt  build.rs  conf.txt  log4rs.yaml  main.rs  to18.rs
src/script/container/: cmd.txt  main.sh  set_fast.sh
src/script/sysconf/: cmd.txt  getlog.bat  log_get.sh  main.sh  ping.sh  uplink.sh
src/script/wifitest/: boot.sh  boot_wifi.sh  cmd copy.txt  cmd.txt  main.sh  wifi_yace.sh
