
[package]
name = "forever"
version = "0.1.0"
edition = "2021"


[dependencies]

reqwest = { version = "0.11", features = ["json"] }
image = "0.24.6"
log = "0.4"
anyhow_ext = "0.2"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.104"
rand = "0.8.5"
base64 = "0.21.5"
chrono = "0.4.26"
regex = "1.10.2"
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4.1"
log4rs = { version = "1.3.0", features = ["gzip", "background_rotation"]}
imageproc = "0.22.0"
rusttype = "0.9.2"
