[package]
name = "update"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
reqwest = { version = "0.11", features = ["blocking","json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
md5 = "0.7"
tokio = { version = "1.32", features = ["full"] }
#tokio-serial = "5.4.1"
log = "0.4"
anyhow_ext = "0.2"
regex = "1.10.2"
serde_with = "1.14.0"
packed_struct = "0.10"
structopt = {version = "0.3"}
chrono = "0.4.38"
env_logger = "0.9"
is-terminal = "0.4.9"
cfg-if = "1.0.0"
log4rs = { version = "1.3.0", features = ["gzip", "background_rotation"]} 
tokio-serial = "5.4.1"